[gd_scene load_steps=9 format=3 uid="uid://baufcdder5qrd"]

[ext_resource type="Texture2D" uid="uid://fdo4s17i0u4s" path="res://assets/danc_cc_by/MainMenu.png" id="1_dk8wm"]
[ext_resource type="Script" path="res://ui/main/TopLevelMenu.gd" id="1_imla2"]
[ext_resource type="Script" path="res://ui/main/MainMenu.gd" id="2_esajf"]
[ext_resource type="PackedScene" uid="uid://b5sa7qn1e2xyb" path="res://ui/NinePatchPanel.tscn" id="2_p0qk4"]
[ext_resource type="Script" path="res://ui/LoadGame.gd" id="3_lps7l"]
[ext_resource type="Script" path="res://ui/NewGame.gd" id="4_hmn6f"]
[ext_resource type="FontFile" uid="uid://bj5tedj4y2vvh" path="res://assets/svofski_pd/Glass_TTY_VT220.ttf" id="7_sn0h5"]

[sub_resource type="LabelSettings" id="LabelSettings_f2j5r"]
font = ExtResource("7_sn0h5")
font_size = 36
outline_size = 5
outline_color = Color(1, 1, 1, 0.380392)

[node name="MainMenu" type="CanvasLayer"]
layer = 100
script = ExtResource("1_imla2")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadGame" parent="Control" instance=ExtResource("2_p0qk4")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -242.0
offset_top = -181.0
offset_right = 242.0
offset_bottom = 181.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_lps7l")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/LoadGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/LoadGame/VBoxContainer"]
layout_mode = 2

[node name="LoadGamesList" type="VBoxContainer" parent="Control/LoadGame/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/LoadGame/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="NewGame" parent="Control" instance=ExtResource("2_p0qk4")]
unique_name_in_owner = true
visible = false
layout_mode = 0
script = ExtResource("4_hmn6f")

[node name="MainMenu" type="TextureRect" parent="Control"]
unique_name_in_owner = true
process_mode = 3
texture_filter = 1
custom_minimum_size = Vector2(364, 352)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -88.0
offset_right = 91.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_dk8wm")
expand_mode = 2
script = ExtResource("2_esajf")

[node name="Label" type="Label" parent="Control/MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -218.0
offset_right = 48.0
offset_bottom = -192.0
grow_horizontal = 2
grow_vertical = 2
text = "Space Craft 22
"
label_settings = SubResource("LabelSettings_f2j5r")

[node name="Continue" type="Button" parent="Control/MainMenu"]
layout_mode = 0
offset_left = 64.0
offset_top = 12.0
offset_right = 157.0
offset_bottom = 43.0
disabled = true
text = "Continue"

[node name="New" type="Button" parent="Control/MainMenu"]
layout_mode = 0
offset_left = 66.0
offset_top = 61.0
offset_right = 159.0
offset_bottom = 92.0
text = "New Game"

[node name="Load" type="Button" parent="Control/MainMenu"]
layout_mode = 0
offset_left = 66.0
offset_top = 110.0
offset_right = 159.0
offset_bottom = 141.0
text = "Load"

[node name="Save" type="Button" parent="Control/MainMenu"]
layout_mode = 0
offset_left = 66.0
offset_top = 159.0
offset_right = 162.0
offset_bottom = 190.0
text = "Save"

[node name="Quit" type="Button" parent="Control/MainMenu"]
layout_mode = 0
offset_left = 68.0
offset_top = 313.0
offset_right = 164.0
offset_bottom = 344.0
text = "Quit"

[connection signal="visibility_changed" from="Control/MainMenu" to="Control/MainMenu" method="_on_visibility_changed"]
[connection signal="pressed" from="Control/MainMenu/Continue" to="Control/MainMenu" method="_on_continue_pressed"]
[connection signal="pressed" from="Control/MainMenu/New" to="Control/MainMenu" method="_on_new_pressed"]
[connection signal="pressed" from="Control/MainMenu/Load" to="Control/MainMenu" method="_on_load_pressed"]
[connection signal="pressed" from="Control/MainMenu/Save" to="Control/MainMenu" method="_on_save_pressed"]
[connection signal="pressed" from="Control/MainMenu/Quit" to="Control/MainMenu" method="_on_quit_pressed"]
